Instrumented the Metric class' constructors to collect zio metrics